Updated a few commands. Connected to VPS for easier committing to GitHub.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "@psibean/discord.js-pagination": "^4.0.5",
     "cheerio": "^1.0.0-rc.12",
-    "discord.js": "^14.0.2",
+    "discord.js": "^14.1.2",
     "google-images": "^2.1.0",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "pm2": "^5.2.0",
     "request": "^2.88.2",
